--- a/home.html
+++ b/home.html
@@ -14,42 +14,62 @@
           <div class="starus-bar__column">
             <i class="fa-solid fa-xmark fa-2x"></i>
           </div>
-          <div class="starus-bar__column"><h2>Play list</h2></div>
+          <div class="starus-bar__column">
+            <h2>Play list</h2>
+          </div>
           <div class="starus-bar__column"></div>
         </div>
 
         <header class="currently-playing">
-          <img src="#" alt="playing-Album" />
-          <h1 class="currently-playing__title">Random Love</h1>
-          <p class="currently-playing__text">by Divay Kapoor</p>
+          <div class="playing-Album">
+            <i class="fa-regular fa-image fa-4x"></i>
+          </div>
+          <div class="currently-playing box">
+            <h1 class="currently-playing__title">Random<br />Love</h1>
+            <p class="currently-playing__text">by Divay Kapoor</p>
+          </div>
         </header>
 
-        <div class="btn-bar">
-          <div class="btn-bar__play">play icon</div>
-          <div class="btn-bar__heart">heart</div>
-          <div class="btn-bar__plus">plus</div>
-        </div>
+        <form class="btn-bar">
+          <button class="btn btn-bar__play">
+            <i class="fa-regular fa-play fa-lg"></i>Play
+          </button>
+          <button class="btn btn-bar__heart">
+            <i class="fa-regular fa-heart fa-lg"></i>
+          </button>
+          <button class="btn btn-bar__plus">
+            <i class="fa-solid fa-plus fa-lg"></i>
+          </button>
+        </form>
 
         <ul>
-          <li>
-            <div class="icon">icon</div>
-            <h3>Matargasti</h3>
-            <p>Mohit Chauhan</p>
+          <li class="icon">
+            <div class="icon__color"></div>
+            <div class="icon__info">
+              <h3>Matargasti</h3>
+              <p>Mohit Chauhan</p>
+            </div>
           </li>
-          <li>
-            <div class="icon">icon</div>
-            <h3>Attitude</h3>
-            <p>Lewis Ofman・Attitude</p>
+          <li class="icon">
+            <div class="icon__color"></div>
+            <div class="icon__info">
+              <h3>Attitude</h3>
+              <p>Lewis Ofman・Attitude</p>
+            </div>
           </li>
-          <li>
-            <div class="icon">icon</div>
-            <h3>Try Everthing</h3>
-            <p>Shakira・Zootopia</p>
+          <li class="icon">
+            <div class="icon__color"></div>
+            <div class="icon__info">
+              <h3>Try Everthing</h3>
+              <p>Shakira・Zootopia</p>
+            </div>
           </li>
-          <li>
-            <div class="icon">icon</div>
-            <h3>Sunflower</h3>
-            <p>Joseph Vincent・Sunflower</p>
+          <li class="icon">
+            <div class="icon__color"></div>
+            <div class="icon__info">
+              <h3>Sunflower</h3>
+              <p>Joseph Vincent・Sunflower</p>
+            </div>
           </li>
         </ul>
       </section>
