--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Welcome to LIME</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <style></style>
   <body>
-    <h1>Mozilla is cool</h1>
-    <img
-      src="https://mdn.github.io/beginner-html-site/images/firefox-icon.png"
-      alt="firefox_logo"
-    />
-    <p>At Mozilla, we're a global community of</p>
-    <ul>
-      <li>technologists</li>
-      <li>thinkers</li>
-      <li>builders</li>
-    </ul>
-    <p>
-      working togerther to keep the Internet alive and accessible, so people
-      wordwide can be informed contributors and creators of the Web. We belive
-      this act of human collaboration across an open plaform is essential to
-      individual growth and our collective future.
-    </p>
-    <p>
-      Read the
-      <a href="https://www.mozilla.org/en-US/about/manifesto/"
-        >Mozilla Manifesto</a
-      >
-      to learn even more about the values and principles that guide the pursuit
-      of our mission.
-    </p>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span>No Service</span><i class="fa-solid fa-wifi"></i>
+      </div>
+      <div class="status-bar__column"><span>18:30</span></div>
+      <div class="status-bar__column">
+        <span>88%</span>
+        <i class="fa-solid fa-battery-three-quarters fa-xl"></i>
+        <i class="fa-solid fa-bolt"></i>
+      </div>
+    </div>
+
+    <header class="welcome-header">
+      <img src="screenshots/lime-logo.svg" alt="logo" />
+      <h1 class="welcome-header__title">LIMEへようこそ</h1>
+      <p class="welcome-header__text">
+        LIMEに登録されてる電話番号でログインしてください。
+      </p>
+    </header>
+
+    <form id="login-form">
+      <input type="text" placeholder="メールアドレス" />
+      <input type="password" placeholder="パスワード" />
+      <input type="submit" value="ログイン" />
+      <input type="checkbox" id="log-in" name="log-in" />
+      <label for="log-in">自動ログイン</label>
+      <a href="#">パスワードを再設定</a>
+    </form>
+    <script
+      src="https://kit.fontawesome.com/f2b801ea4d.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
