status-bar_commit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <header class="welcome-header">
-      <img src="screenshots/lime-logo.svg" alt="logo" />
+      <img src="screenshots/lime-logo.svg" alt="logo" width="100" />
       <h1 class="welcome-header__title">LIMEへようこそ</h1>
       <p class="welcome-header__text">
         LIMEに登録されてる電話番号でログインしてください。
