--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
     </header>
 
     <form id="login-form">
+      <label class="login-form_email">メールアドレス</label>
       <input type="text" placeholder="メールアドレス" />
       <input type="password" placeholder="パスワード" />
-      <input type="submit" value="ログイン" />
-      <input type="checkbox" id="log-in" name="log-in" />
-      <label for="log-in">自動ログイン</label>
-      <a href="#">パスワードを再設定</a>
+      <input class="login-form_submit" type="submit" value="ログイン" />
+      <div class="login-content">
+        <div>
+          <input type="checkbox" id="log-in" name="log-in" />
+          <label for="log-in"><span>自動ログイン</span></label>
+        </div>
+        <a href="#">パスワードを再設定</a>
+      </div>
     </form>
 
     <script
